Blender crash on switching to Edit Mode after clearing driver animation data in the Outliner #67588

Closed
opened 2019-07-24 13:00:09 +02:00 by Krzysztof Kowalczyk · 3 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Quadro K2100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 412.16

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: b63f0266a0
Worked: (optional)

Short description of error
After clearing driver animation data from an object in the Outliner, Blender crashes when I try to edit that object in Edit Mode. It applies to any type of object which can be edited in Edit Mode (Mesh, Curve, Text, Armature etc.).

Exact steps for others to reproduce the error

  1. Select the default cube;
  2. Add a driver to whatever object property (property and driver settings doesn't matter, I chose Location X);
  3. Expand cube object data in the Outliner;
  4. Right click on 'Animation' and choose 'Clear Animation Data';
  5. Go to Edit Mode - Blender crashes;
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Quadro K2100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 412.16 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: `b63f0266a0` Worked: (optional) **Short description of error** After clearing driver animation data from an object in the Outliner, Blender crashes when I try to edit that object in Edit Mode. It applies to any type of object which can be edited in Edit Mode (Mesh, Curve, Text, Armature etc.). **Exact steps for others to reproduce the error** 1. Select the default cube; 2. Add a driver to whatever object property (property and driver settings doesn't matter, I chose Location X); 3. Expand cube object data in the Outliner; 4. Right click on 'Animation' and choose 'Clear Animation Data'; 5. Go to Edit Mode - Blender crashes;

Added subscriber: @KrzysztofKowalczyk

Added subscriber: @KrzysztofKowalczyk
Sergey Sharybin was assigned by Campbell Barton 2019-07-25 07:05:06 +02:00

This issue was referenced by 829cbd88ff

This issue was referenced by 829cbd88ff5cef4ce31051562c1449fe5e565a88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67588
No description provided.