Fix T67588: Crash after clearing animation in outliner